--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Use this to run the code:
 python Assignment2_CS4420.py -a -g -rows numrows -cols numcols -t type indir outdir
 
 
-This program is built off python 3 and is needed to run. You will also need to install opencv-python, and screeninfo.with this project I just didn't have a lot of time to spend on it so it wasn't as perfected as I wanted it to be. Doing this project it seems easier than it is which is upsetting because I've should've spent more time on it.
+This program is built off python 3 and is needed to run. You will also need to install opencv-python, and screeninfo. With this project my biggest issue was tyring to get the aspect ratio to work and it was such a simple fix, I forgot to resize the window size and it's fixed now but I spent a lot of time trying to get this to work.
 
 Sample execution:
 python Assignment2_CS4420.py -a -g -rows 480 -cols 640 -t jpg dir outdir
@@ -16,3 +16,7 @@ pip install opencv-python
 
 Sources:
 https://www.geeksforgeeks.org/python-opencv-cv2-imwrite-method/
+https://pixabay.com/images/search/sedan/
+https://www.pexels.com/search/suv/
+
+
